Commit Message 12:15pm Tokyo Time

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,29 @@
 </head>
 
 <body>
-
-Hello World 
+<h1>Job Applied For </h1>
+<form action="" method="post" enctype="multipart/form-data">
+         <fieldset>
+            <label for="name">Title:</label>
+            <input type="text" id="title" name="title" placeholder="Enter the title of the Job" />
+            <br />
+            <label for="name">Site where job was posted:</label>
+            <input type="text" id="site" name="site" placeholder="Enter the title of the Job" />
+            <br />
+            <label for="name">Company Name:</label>
+            <input type="text" id="company" name="company" placeholder="Enter the title of the Job" />
+            <br />
+            <label for="email">Skill Set:</label>
+            <input type="email" id="skillset" name="skillset" placeholder="Type the skillset" />
+            <br />
+            <label for="name">URL:</label>
+            <input type="text" id="url" name="url" placeholder="Enter the title of the Job" />
+            <br />
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" placeholder="Enter a short description about yourself"></textarea>
+            <br />
+            <input type="submit" value="Create Profile" />
+         </fieldset>
+      </form>
 </body>
 </html>
