--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,19 +8,19 @@
 <h1>Job Applied For </h1>
 <form action="" method="post" enctype="multipart/form-data">
          <fieldset>
-            <label for="name">Title:</label>
+            <label for="title">Title:</label>
             <input type="text" id="title" name="title" placeholder="Enter the title of the Job" />
             <br />
-            <label for="name">Site where job was posted:</label>
+            <label for="site">Site where job was posted:</label>
             <input type="text" id="site" name="site" placeholder="Enter the title of the Job" />
             <br />
-            <label for="name">Company Name:</label>
+            <label for="company">Company Name:</label>
             <input type="text" id="company" name="company" placeholder="Enter the title of the Job" />
             <br />
             <label for="email">Skill Set:</label>
             <input type="email" id="skillset" name="skillset" placeholder="Type the skillset" />
             <br />
-            <label for="name">URL:</label>
+            <label for="URL">URL:</label>
             <input type="text" id="url" name="url" placeholder="Enter the title of the Job" />
             <br />
             <label for="description">Description:</label>
